# PDF_tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architecture.md  changelog.md  mind.md  roadmap.md
.localdeps/debs/: libjpeg62-turbo-dev_1%3a2.1.5-4_amd64.deb  libpoppler-dev_25.03.0-5+deb13u2_amd64.deb  libpoppler-qt6-dev_25.03.0-5+deb13u2_amd64.deb  libqpdf-dev_12.2.0-1_amd64.deb
.localdeps/sysroot/usr/include/poppler/qt6/: poppler-export.h  poppler-version.h
.localdeps/sysroot/usr/lib/x86_64-linux-gnu/: libjpeg.so.62  libpoppler-qt6.so.3  libpoppler.so.147  libqpdf.so.30
.localdeps/sysroot/usr/lib/x86_64-linux-gnu/cmake/qpdf/: libqpdfTargets-relwithdebinfo.cmake  libqpdfTargets.cmake  qpdfConfig.cmake
.localdeps/sysroot/usr/lib/x86_64-linux-gnu/pkgconfig/: libjpeg.pc  libqpdf.pc  poppler-qt6.pc  poppler.pc
build-local/: .ninja_deps  .ninja_log  CMakeCache.txt  PDFTool  build.ninja  cmake_install.cmake
build-local/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-local/PDFTool_autogen/: deps  mocs_compilation.cpp
build-local/PDFTool_autogen/3YJK5W5UP7/: qrc_icons.cpp
build-local/PDFTool_autogen/FJX7GYWF7A/: moc_PdfDocumentController.cpp  moc_PdfDocumentController.cpp.d
build-local/PDFTool_autogen/YPKJ5OE7LN/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PageThumbnailListModel.cpp.d  moc_PdfView.cpp  moc_PdfView.cpp.d
build-ninja/: CMakeCache.txt  cmake_install.cmake
build-ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
installer/: README.md  build_deb.sh  install.sh  update.sh
installer/linux/: pdf-tool.desktop.in  pdf-tool.in
resources/: icons.qrc
scripts/: build.sh  configure.sh
src/: main.cpp
src/document/: AnnotationModel.cpp  AnnotationModel.h  AtomicFileTransaction.cpp  AtomicFileTransaction.h  DocumentStateStore.cpp  DocumentStateStore.h  ExportService.cpp  ExportService.h  FormFieldModel.cpp  FormFieldModel.h  HistoryService.cpp  HistoryService.h  OcrServiceController.cpp  OcrServiceController.h  PageThumbnailProvider.cpp  PageThumbnailProvider.h  PdfDocumentController.cpp  PdfDocumentController.h  PdfDocumentControllerSearch.cpp  PdfDocumentControllerSelection.cpp  PdfDocumentControllerState.cpp  PdfDocumentTypes.h  PdfTextSelection.h  RedactionModel.cpp  RedactionModel.h  SearchModel.h  SearchService.cpp  SearchService.h  SelectionModel.h  SelectionService.cpp  SelectionService.h  SidecarService.cpp  SidecarService.h
src/operations/: QPdfOperations.cpp  QPdfOperations.h
src/rendering/: PdfRenderEngine.h  PopplerAdapter.cpp  PopplerAdapter.h
src/services/: OcrService.cpp  OcrService.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  MainWindowDialogWorkflows.cpp  MainWindowFileWorkflows.cpp  MainWindowState.cpp  MainWindowSupport.cpp  MainWindowSupport.h  PageThumbnailListModel.cpp  PageThumbnailListModel.h  PdfView.cpp  PdfView.h
tests/: AnnotationModelTests.cpp  DocumentStateStoreTests.cpp  ExportServiceTests.cpp  FormFieldModelTests.cpp  HistoryServiceTests.cpp  OcrServiceControllerTests.cpp  PdfDocumentControllerTests.cpp  RedactionModelTests.cpp  SearchModelTests.cpp  SearchServiceTests.cpp  SelectionServiceTests.cpp
